tests/paczka1/fuzzy1/97087423.err
Error in line 6: sprsC0V S385 30,3
Error in line 13: Rzr6x4a S946 33,8
Error in line 14: AWsA S325 20,0
Error in line 1: sEmo30Q S207 3,9
Error in line 33: sEmo30Q S946 25,7
